Fixed overflow issues in known contexts like meno, double panel and collapse panel.

--- a/Tessin.Bladerunner/Themes/Sass/_blades.scss
+++ b/Tessin.Bladerunner/Themes/Sass/_blades.scss
@@ -1,5 +1,10 @@
 .blade-wrapper {
   display: flex;
+  flex: 1 1 auto; // Allow things to grow and shrink.
+  width: max-content; // We dont want the wrapper to grow more than needed.
+  overflow-x: auto; // In case blades don't fit in width.
+  overflow-y: hidden; // Hide vertical. Always.
+  height: 100%;
 }
 
 .blade {
@@ -37,20 +42,28 @@
   width: 100%;
 }
 
+.blade-container > div,
+.blade-container > div > div {
+  display: flex; // Flex all the day.
+  width: 100%; // Setting flex needs 100% width.
+  height: 100%; // Always 100%.
+}
+
 .blade-panel {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   width: 100%;
-  overflow: hidden; /* Just make sure overflowing things don't end up over other blades. */
 }
 
 .blade-header {
+  display: flex;
+  flex: 0 0 40px; /* When paren uses flex, we can scale strict here, instead of setting height. */
   width: 100%;
-  height: 43px;
+
   border-bottom: 1px solid $blade-border-color;
   background-color: $primary-header;
-  display: flex;
+
   flex-wrap: nowrap;
   justify-content: space-between;
 }
@@ -74,24 +87,36 @@
 .blade-content {
   display: flex;
   width: 100%;
-  min-height: 0;
-  overflow: hidden;
+  height: 100%;
   position: relative;
+  overflow-y: auto; /* In most cases, like toggle-panel, this will suffice to oveflow its children. */
+}
+
+/* We need flex throughout to figure out scrolling further down the line.. */
+.blade-content > div,
+.blade-content > div > div {
+  display: flex;
+  align-items: flex-start; // We don't want stretching. Align from top to bottom.
+  width: 100%;
   height: 100%;
 }
 
-/* We need flox throughout to figure out scrolling further down the line.. */
-.blade-content > div,
-.blade-content > div > div
-{
-  display: flex;
-  width: 100%;
+.blade-content > div > div > div {
+  flex: 1 1 auto; // Required to allow for children to overflow.
+  height: 100% !important; // Override content-max to let children overflow.
 }
 
-.blade-content > div > div > div
-{
-  //width:calc(100% - #{$panel-margin});
-  width:100%
+.blade-content > div > div > div > div {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+// This is DEEp. Needed to make scrolling work in Menu.
+.blade-content > div > div > div > div > div {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .blade:nth-child(even) .blade-panel {
